# headunit

./: .gitignore  CMakeLists.txt  Makefile  build.ninja  callbacks.cpp  callbacks.h  cmake_install.cmake  headunit.h  main.cpp  main.h  outputs.cpp  outputs.h  server.cpp
common/: audio.cpp  audio.h
hu/: hu_aap.cpp  hu_aap.h  hu_ssl.cpp  hu_tcp.cpp  hu_usb.cpp
ubuntu/: README.md  callbacks.cpp  main.cpp  outputs.cpp  server.cpp  server.h  server_commands.cpp  server_commands.h
ubuntu/AndroidAuto/: AndroidAuto.cbp  AndroidAuto.layout
